# Bookworm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude-code-config-docker.json  claude-code-config.json  config.yaml  docker-compose.yml  plan.md  pyproject.toml  todo.md
.claude-plugin/: marketplace.json  plugin.json
skills/bookworm-assist/: SKILL.md
skills/bw/: SKILL.md
skills/bw-ingest/: SKILL.md
skills/bw-read/: SKILL.md
skills/bw-research/: SKILL.md
src/library_mcp/: __init__.py  __main__.py  chunker.py  cli.py  config.py  db.py  embeddings.py  extract.py  ingest.py  logging_config.py  manifest.py  models.py  server.py
tests/: conftest.py  test_chunker.py  test_db.py  test_extract.py  test_ingest.py  test_manifest.py  test_search.py
